--- a/server/views/chat.pug
+++ b/server/views/chat.pug
@@ -1,7 +1,7 @@
 //- Page: Chat
 extends layout/index
 block content
-  section.page-section
+  header.page-section
     .container
       h2.section-title Chat
       p.section-subtitle.center We&apos;ve got a ticket for everyone. Which one for you?
