--- a/server/views/conduct.pug
+++ b/server/views/conduct.pug
@@ -1,7 +1,7 @@
 //- Page: Code of Conduct
 extends layout/index
 block content
-  section.page-section
+  header.page-section
     .container
       h2.section-title Code of Conduct
       p.section-subtitle.center We take our code of conduct very seriously &amp; you should too.
@@ -18,15 +18,18 @@ block content
         p
           | Harassment includes offensive verbal comments related to gender, sexual orientation, disability, physical appearance, body size, race, religion, sexual images in public spaces, deliberate intimidation, stalking, following, harassing photography or recording, sustained disruption of talks or other events, inappropriate physical contact, and unwelcome sexual attention.
         p
-          | Participants asked to stop any harassing behaviour are expected to comply immediately.
+          strong Participants 
+          | asked to stop any harassing behaviour are expected to comply immediately.
         p
-          | Sponsors are also subject to the anti-harassment policy. In particular, sponsors should not use sexualized images, activities, or other material. Booth staff (including volunteers) should not use sexualized clothing/uniforms/costumes, or otherwise create a sexualized environment.
+          strong Sponsors 
+          | are also subject to the anti-harassment policy. In particular, sponsors should not use sexualized images, activities, or other material. Booth staff (including volunteers) should not use sexualized clothing/uniforms/costumes, or otherwise create a sexualized environment.
         p
           | If a participant engages in harassing behaviour, the conference organizers may take any action they deem appropriate, including warning the offender or expulsion from the conference with no refund.
         p
           | If you are being harassed, notice that someone else is being harassed, or have any other concerns, please contact a member of conference staff immediately. Conference staff can be identified as they&apos;ll be wearing branded volunteer buttons.
         p
-          | Conference staff will be happy to help participants contact hotel/venue security or local law enforcement, provide escorts, or otherwise assist those experiencing harassment to feel safe for the duration of the conference. We value your attendance.
+          strong Conference staff 
+          | will be happy to help participants contact hotel/venue security or local law enforcement, provide escorts, or otherwise assist those experiencing harassment to feel safe for the duration of the conference. We value your attendance.
         p
           | We expect participants to follow these rules at conference and workshop venues and conference-related social events.
         hr
