--- a/server/views/feedback.pug
+++ b/server/views/feedback.pug
@@ -1,7 +1,7 @@
 //- Page: Feedback
 extends layout/index
 block content
-  section.page-section
+  header.page-section
     .container
       h2.section-title Feedback
       p.section-subtitle.center Like what you see? Let us know.
