--- a/server/views/location.pug
+++ b/server/views/location.pug
@@ -1,9 +1,11 @@
 //- Page: Location
 extends layout/index
 block content
-  section.page-section
+  header.page-section
     .container
-      h2.section-title Location
-      p.section-subtitle.center Our venue for 2019 is located in the food capital of Korea, Jeonju.
+      h2.section-title Conference Venue
+      p.section-subtitle.center Jeonju University, Star Center 
+      p.center
+        a.button(href='http://koreatesol.org/content/jeonju-venue-directions') Venue Directions PDF
   include partials/directions
   include partials/map
