--- a/server/views/partials/directions.pug
+++ b/server/views/partials/directions.pug
@@ -1,7 +1,7 @@
-.container.small.meta-info
-  h2.page-section-title Conference Venue
-  h4.page-section-subtitle Jeonju University, Star Center, Room 302
-  a.button(href='http://koreatesol.org/content/jeonju-venue-directions') Venue Directions PDF
+//- .container.small.meta-info
+//-   h2.page-section-title Conference Venue
+//-   h4.page-section-subtitle Jeonju University, Star Center, Room 302
+//-   a.button(href='http://koreatesol.org/content/jeonju-venue-directions') Venue Directions PDF
 img.full-bleed(src='/img/location/jju-huge-crop-2.jpg')
 .container.small
   p
