--- a/server/views/privacy.pug
+++ b/server/views/privacy.pug
@@ -1,10 +1,13 @@
 //- Page: Privacy
 extends layout/index
 block content
-  section.page-section
-    .container
+  header.page-section
+    .container.small
       h2.section-title Privacy Policy
-      p.section-subtitle.center At KOTESOL, we take your personal information seriously. Here&apos;s the outline of our guidelines and practices around privacy.
+      p.section-subtitle.center 
+        | At KOTESOL, we take your personal information seriously. 
+        br 
+        | Here&apos;s the outline of our guidelines and practices around privacy.
   section.page-section.privacy
     .container.small
         h4 Information Collection &amp; Use
