--- a/server/views/speaker-single.pug
+++ b/server/views/speaker-single.pug
@@ -2,7 +2,7 @@
 //- Page: Speaker Single
 extends layout/index
 block content
-  section.page-section
+  header.page-section
     .container
       h2.section-title= speaker.name
       p.section-subtitle.center= speaker.affiliation
