--- a/server/views/speakers.pug
+++ b/server/views/speakers.pug
@@ -3,7 +3,7 @@ extends layout/index
 block content
   //- include partials/speaker-grid 
   //- include partials/speaker-single 
-  section.page-section
+  header.page-section
     .container
       h2.section-title Speakers
       p.section-subtitle.center Big names, Bigger ideas
