--- a/server/views/sponsors.pug
+++ b/server/views/sponsors.pug
@@ -1,7 +1,7 @@
 //- Page: Sponsors
 extends layout/index
 block content
-  section.page-section
+  header.page-section
     .container
       h2.page-section-title Our sponsoring partners
       p.section-subtitle.center Let's grow together.
