--- a/public/css/schedule-grid.css
+++ b/public/css/schedule-grid.css
@@ -154,10 +154,10 @@
   font-weight: 300;
   display: block;
   width: 100%;
-  margin-top: -1.5rem;
-  margin-bottom: 1rem;
+  /* margin-top: -1.5rem;
+  margin-bottom: 1rem; */
 }
 
 .credits a {
-  color: #F0B95C;
+  /* color: #F0B95C; */
 }
