--- a/server/views/notfound.pug
+++ b/server/views/notfound.pug
@@ -1,7 +1,7 @@
 //- Page: Not Found (404)
 extends layout/index
 block content
-  section.page-section
+  header.page-section
     .container
       h2.section-title Not Found
       p.section-subtitle.center We&apos;ve got a ticket for everyone. Which one for you?
