--- a/server/views/schedule.pug
+++ b/server/views/schedule.pug
@@ -1,9 +1,12 @@
 //- Page: Schedule
 extends layout/index
 block content
-  section.page-section
+  header.page-section
     .container
       h2.section-title Schedule
-      p.section-subtitle.center Explore the themes our speakers will discuss. From pedagogy to technology, there's a track for everyone.
+      p.section-subtitle.center 
+        | Explore the themes our speakers will discuss. 
+        //- br
+        | From pedagogy to technology, there's a track for everyone.
   include partials/schedule-table
   include partials/speaker-grid
