--- a/server/views/tickets.pug
+++ b/server/views/tickets.pug
@@ -1,7 +1,7 @@
 //- Page: Tickets
 extends layout/index
 block content
-  section.page-section
+  header.page-section
     .container
       h2.section-title Let&apos;s Make it Official
       p.section-subtitle.center We&apos;ve got a ticket for everyone. Which one for you?
