--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -68,7 +68,10 @@ block content
     include partials/speaker-grid 
 
   section.page-section.schedule.parallax 
-    include partials/schedule-table 
+    include partials/schedule-table-outline
+
+  //- section.page-section.schedule.parallax 
+  //-   include partials/schedule-table 
 
   //- section.page-section.parallax 
   //-   include partials/schedule-grid 
