--- a/server/views/layout/includes/footer.pug
+++ b/server/views/layout/includes/footer.pug
@@ -1,52 +1,58 @@
 section.site-footer
   .container
-    ul.conference-details-nav
-      li.conference-details-nav-item
-        a(href='/') Home
-      li.conference-details-nav-item
-        a(href='/speakers') Speakers
-      li.conference-details-nav-item
-        a(href='/schedule') Schedule
-      li.conference-details-nav-item
-        a(href='/location') Location
-      li.conference-details-nav-item
-        a(href='/sponsors') Sponsors
-      li.conference-details-nav-item
-        a(href='/tickets') Tickets
-    ul.conference-details-nav
-      li.conference-details-nav-item
-        a(href='/team') About
-      li.conference-details-nav-item
-        a(href='https://koreatesol.org/join-kotesol') Membership
-      li.conference-details-nav-item
-        a(href='/code-of-conduct') Code of Conduct
-      li.conference-details-nav-item
-        a(href='/privacy') Privacy Policy
-      li.conference-details-nav-item
-        a(href='mailto:jnjconference@gmail.com') Contact Us
-      //
-        <li class="conference-details-nav-item">
-        <a href="/chat">Chat</a>
-        </li>
-    nav.social-nav
-      img.footer-logo-img(src='/img/kotesol-logo.png')
-      ul.social-nav-list
-        li.social-nav-item
-          a(href='http://facebook.com/jnjkotesol')
-            i.fab.fa-facebook
-            span.screen-reader-text Facebook
-        li.social-nav-item
-          a(href='http://instagram.com/jnjkotesol')
-            i.fab.fa-instagram
-            span.screen-reader-text Instagram
-        li.social-nav-item
-          a(href='http://koreatesol.org')
-            i.fas.fa-globe
-            span.screen-reader-text KOTESOL
-        li.social-nav-item
-          a(href='mailto:jnj.presenters@gmail.com')
-            i.far.fa-envelope
-            span.screen-reader-text Email
+    .about-us
+      h3 About Us
+      p Join us in Jeonju, the food capital of Korea, this May! The 2019 KOTESOL National Conference will kick off on May 25th in Jeonju University's Onnuri Hall. It will feature a variety of speakers covering ELT topics from beginner to expert levels.
+      p We're expecting over 300 attendees and are anticipating another great conference!
+      h3 Hosted by
+      nav.social-nav
+        img.footer-logo-img(src='/img/kotesol-logo.png')
+        ul.social-nav-list
+          li.social-nav-item
+            a(href='http://facebook.com/jnjkotesol')
+              i.fab.fa-facebook
+              span.screen-reader-text Facebook
+          li.social-nav-item
+            a(href='http://instagram.com/jnjkotesol')
+              i.fab.fa-instagram
+              span.screen-reader-text Instagram
+          li.social-nav-item
+            a(href='http://koreatesol.org')
+              i.fas.fa-globe
+              span.screen-reader-text KOTESOL
+          li.social-nav-item
+            a(href='mailto:jnj.presenters@gmail.com')
+              i.far.fa-envelope
+              span.screen-reader-text Email
+    nav.footer-navigation
+      ul.conference-details-nav
+        li.conference-details-nav-item
+          a(href='/') Home
+        li.conference-details-nav-item
+          a(href='/speakers') Speakers
+        li.conference-details-nav-item
+          a(href='/schedule') Schedule
+        li.conference-details-nav-item
+          a(href='/location') Location
+        li.conference-details-nav-item
+          a(href='/sponsors') Sponsors
+        li.conference-details-nav-item
+          a(href='/tickets') Tickets
+      ul.conference-details-nav
+        li.conference-details-nav-item
+          a(href='/team') About
+        li.conference-details-nav-item
+          a(href='https://koreatesol.org/join-kotesol') Membership
+        li.conference-details-nav-item
+          a(href='/code-of-conduct') Code of Conduct
+        li.conference-details-nav-item
+          a(href='/privacy') Privacy Policy
+        li.conference-details-nav-item
+          a(href='mailto:jnjconference@gmail.com') Contact Us
+        //
+          <li class="conference-details-nav-item">
+          <a href="/chat">Chat</a>
+          </li>
 footer.site-credits
   .container
     p.copyright
