--- a/server/views/partials/speaker-grid.pug
+++ b/server/views/partials/speaker-grid.pug
@@ -53,4 +53,4 @@ ul.grid
   //-         | Angela
   //-         span KOTESOL member since 2018
 .page-button-container
-  a.page-button.button(href='/speakers') View All Speaker Details &#x1F449;
+  a.page-button(href='/speakers') 2019 Speakers
