--- a/server/views/index.pug
+++ b/server/views/index.pug
@@ -64,8 +64,8 @@ block content
   section.pages-section.plenary
     include partials/plenary
 
-  section.page-section.speakers
-    include partials/speaker-grid 
+  //- section.page-section.speakers
+  //-   include partials/speaker-grid 
 
   section.page-section.schedule.parallax 
     include partials/schedule-table-outline
@@ -76,14 +76,14 @@ block content
   //- section.page-section.parallax 
   //-   include partials/schedule-grid 
 
-  section.page-section.buzz 
-    include partials/buzz-grid
+  //- section.page-section.buzz 
+  //-   include partials/buzz-grid
   
-  section.page-section.gallery 
-    include partials/gallery-grid
+  //- section.page-section.gallery 
+  //-   include partials/gallery-grid
 
-  section.page-section.sponsors 
-    include partials/sponsors-list 
+  //- section.page-section.sponsors 
+  //-   include partials/sponsors-list 
 
   section.conference-map
     include partials/map 
